# ebook2m4b

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: preseeded-image-manual.md
ebook2m4b/: __init__.py  cli.py  conversion.py  db.py  jobs.py  models.py  queueing.py  settings.py  storage.py  worker.py
ebook2m4b/parsers/: __init__.py  base.py  processing.py
ebook2m4b/tts_providers/: __init__.py  base.py  registry.py
ebook2m4b/tts_providers/edge/: __init__.py  fallback_catalog.py  provider.py
ebook2m4b/tts_providers/kokoro/: __init__.py  provider.py  speakers.py  synthesis.py
ebook2m4b/web_ui/: __init__.py  app.py
ebook2m4b/web_ui/static/: app.css  home.js
ebook2m4b/web_ui/templates/: base.html  home.html  job_detail.html
ebook2m4b/web_ui/templates/partials/: job_card.html  job_live.html  notice.html
scripts/: build_push_preseeded_image.ps1  build_push_preseeded_image.sh  preseed_kokoro_ubuntu.sh
tests/: conftest.py  e2e_docker_parse_paste_preview.py  test_api_parse_generate.py  test_edge_fallback_catalog.py  test_parse_generate_split.py  test_parser_chapter_levels.py
